Fix color contrast

--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ header h1{
     text-decoration: none;
     font-size: medium;
     color: white;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgb(68, 68, 68);
 }
 
 main h2{
@@ -219,7 +219,7 @@ figure:hover > .caption{
 
 #gallery_content p{
     font-family: 'Rock Salt', cursive;
-    background: rgba(233, 233, 233, 0.603);
+    background: rgb(233, 233, 233);
     padding: .2em .5em;
     line-height: 3;
     font-weight: bold;
